syntax = "proto3";
package zetachain.zetacore.crosschain;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/node/x/crosschain/types";

message EventInboundFinalized {
  string msg_type_url = 1;
  string cctx_index = 2;
  string sender = 3;
  string tx_orgin = 4;
  string asset = 5;
  string inbound_hash = 6;
  string inbound_block_height = 7;
  string receiver = 8;
  string receiver_chain = 9;
  string amount = 10;
  string relayed_message = 11;
  string new_status = 12;
  string status_message = 13;
  string sender_chain = 14;
}

message EventZrcWithdrawCreated {
  string msg_type_url = 1;
  string cctx_index = 2;
  string sender = 3;
  string sender_chain = 4;
  string inbound_hash = 5;
  string receiver = 6;
  string receiver_chain = 7;
  string amount = 8;
  string new_status = 9;
}

message EventZetaWithdrawCreated {
  string msg_type_url = 1;
  string cctx_index = 2;
  string sender = 3;
  string inbound_hash = 4;
  string new_status = 5;
}

message EventOutboundFailure {
  string msg_type_url = 1;
  string cctx_index = 2;
  string old_status = 3;
  string new_status = 4;
  string value_received = 5;
}

message EventOutboundSuccess {
  string msg_type_url = 1;
  string cctx_index = 2;
  string old_status = 3;
  string new_status = 4;
  string value_received = 5;
}

message EventCCTXGasPriceIncreased {
  string cctx_index = 1;
  string gas_price_increase = 2;
  string additional_fees = 3;
}

message EventAssetWhitelist {
  string whitelist_cctx_index = 1;
  string zrc20_address = 2;
}

message EventERC20CustodyFundsMigration {
  string new_custody_address = 1;
  string erc20_address = 2;
  string amount = 3;
  string cctx_index = 4;
}

message EventERC20CustodyPausing {
  int64 chain_id = 1;
  bool pause = 2;
  string cctx_index = 3;
}

message EventInboundProcessingFailure {
  string inbound_hash = 1;
  string error_message = 2;
}